--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@ th.selected a {
   text-decoration: none;
 }
 
+#toggle_extra_cell {
+  text-align: center;
+}
+
 div.timeline {
   margin-top: 1ch;
 }
